--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1",
     "lodash": "^4.17.21",
+    "luxon": "^3.4.4",
     "slugify": "^1.6.6"
   }
 }
